gccida/g1/rtx_equal_for_memref_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_memref_p/src/alias.c:1553:17: error: expected expression
if ( *( _OWORD *)&x == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_memref_p/src/alias.c:1553:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&x == 0LL ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_memref_p/src/alias.c:1581:12: error: invalid operands to binary expression ('struct rtx_def' and 'struct rtx_def')
if ( v3[1] == v5[1] ) 
     ~~~~~ ^  ~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtx_equal_for_memref_p/src/obj/alias.o] Error 1
